--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -23,7 +23,9 @@
             <div class="item" style="background-image: url(img/img11.jpeg)"></div>
             <div class="item" style="background-image: url(img/img12.jpeg)"></div>
         </main>
-
-    
+<div class="link-wrapper">
+    <a href="https://www.github.com/klesson" class="autor">Design by Ruru</a>
+</div>
+<script> </script>
 </body>
 </html>
